--- a/radar.html
+++ b/radar.html
@@ -1,6 +1,3 @@
----
----
-
 <html>
 
 <head>
@@ -9,7 +6,7 @@
 <link rel="shortcut icon" href="https://www.zalando.de/favicon.ico">
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="{{ base.url | prepend: site.url }}/assets/radar.js"></script>
+<script src="/assets/radar.js"></script>
   
 <link rel="stylesheet" href="radar.css">
 </head>
