--- a/radar.html
+++ b/radar.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" href="https://www.zalando.de/favicon.ico">
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="/PSD-blog/assets/radar.js"></script>
+<script src="/assets/radar.js"></script>
   
 <link rel="stylesheet" href="radar.css">
 </head>
